--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "nest-typescript-starter",
+  "name": "test-shortener-nest",
+  "version": "0.0.1",
+  "description": "",
+  "author": "",
   "private": true,
-  "version": "1.0.0",
-  "description": "Nest TypeScript starter repository",
-  "license": "MIT",
+  "license": "UNLICENSED",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
@@ -20,32 +21,43 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^7.0.1",
-    "@nestjs/core": "^7.0.1",
-    "@nestjs/platform-express": "^7.0.1",
+    "@nestjs/common": "^7.0.8",
+    "@nestjs/core": "^7.0.8",
+    "@nestjs/mongoose": "6.4.0",
+    "@nestjs/passport": "7.0.0",
+    "@nestjs/platform-express": "^7.0.8",
+    "mongoose": "5.9.9",
+    "nanoid": "3.1.3",
+    "passport": "0.4.1",
+    "passport-local": "1.0.0",
+    "passport-local-mongoose": "6.0.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.5.4"
+    "rxjs": "^6.5.5"
   },
   "devDependencies": {
-    "@nestjs/cli": "^7.0.0",
+    "@nestjs/cli": "^7.1.2",
     "@nestjs/schematics": "^7.0.0",
-    "@nestjs/testing": "^7.0.1",
-    "@types/express": "^4.17.3",
-    "@types/jest": "^25.1.4",
-    "@types/node": "^13.9.1",
+    "@nestjs/testing": "^7.0.8",
+    "@types/express": "^4.17.6",
+    "@types/jest": "25.2.1",
+    "@types/mongoose": "5.7.11",
+    "@types/node": "^13.11.1",
+    "@types/passport-local": "1.0.33",
+    "@types/passport-local-mongoose": "4.0.13",
     "@types/supertest": "^2.0.8",
-    "@typescript-eslint/eslint-plugin": "^2.23.0",
-    "@typescript-eslint/parser": "^2.23.0",
+    "@typescript-eslint/eslint-plugin": "^2.28.0",
+    "@typescript-eslint/parser": "^2.28.0",
+    "dotenv": "8.2.0",
     "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-import": "^2.20.1",
-    "jest": "^25.1.0",
-    "prettier": "^1.19.1",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-import": "^2.20.2",
+    "jest": "^25.3.0",
+    "prettier": "^2.0.4",
     "supertest": "^4.0.2",
-    "ts-jest": "^25.2.1",
-    "ts-loader": "^6.2.1",
-    "ts-node": "^8.6.2",
+    "ts-jest": "25.3.1",
+    "ts-loader": "^7.0.0",
+    "ts-node": "^8.8.2",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^3.8.3"
   },
@@ -60,9 +72,6 @@
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
     },
-    "collectCoverageFrom": [
-      "**/*.(t|j)s"
-    ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
   }
